--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "^4.17.1",
     "firebase-admin": "^10.0.0",
     "mongodb": "^4.1.3",
-    "nodemon": "^2.0.14"
+    "nodemon": "^2.0.14",
+    "stripe": "^8.190.0"
   }
 }
